--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
 
   <!-- App theme & utilities -->
   <link href="{{ url_for('static', filename='css/app.css') }}" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
 
   {% block head %}{% endblock %}
 
